# lawful-classes

./: README.md  cabal.project  lawful-classes-readme.cabal
.github/workflows/: codestyle.yml  haskell-ci.yml
lawful-classes-demo/: CHANGELOG.md  lawful-classes-demo.cabal
lawful-classes-demo/src/Test/Lawful/: Demo.hs
lawful-classes-demo/test/: Main.hs  TastyUtils.hs
lawful-classes-hedgehog/: CHANGELOG.md  README.md  lawful-classes-hedgehog.cabal
lawful-classes-hedgehog/src/Test/Lawful/: Hedgehog.hs
lawful-classes-hedgehog/test/: Main.hs
lawful-classes-quickcheck/: CHANGELOG.md  README.md  lawful-classes-quickcheck.cabal
lawful-classes-quickcheck/src/Test/Lawful/: QuickCheck.hs
lawful-classes-quickcheck/test/: Main.hs
lawful-classes-types/: CHANGELOG.md  README.md  lawful-classes-types.cabal
lawful-classes-types/src/Test/Lawful/: Types.hs
