cabal-version:   3.0
name:            lawful-classes-readme
version:         0.1.0.0
synopsis:        Demo project for lawful-classes
description:
  A demo of the @lawful-classes@ ecosystem, including a library exposing a
  class with some laws and an instance of said class, and a test-suite which
  validates the instance obeys to the laws, both using Hedgehog and QuickCheck.
  .
  Note, in a real-world project, one would use either Hedgehog or QuickCheck to
  check the laws, and the class and instance(s) are likely found in different
  packages.

homepage:        https://github.com/NicolasT/lawful-classes
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be
copyright:       (c) 2023, Nicolas Trangez
category:        Testing
build-type:      Simple
extra-doc-files: README.md

-- extra-source-files:

tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.2.5 || ==9.4.4

source-repository head
  type:     git
  location: https://github.com/NicolasT/lawful-classes.git
  branch:   main

common warnings
  ghc-options: -Wall

test-suite lawful-classes-readme
  import:             warnings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     .
  main-is:            README.lhs
  build-depends:
    , base                       ^>=4.14.3.0 || ^>=4.15.1.0 || ^>=4.16.3.0 || ^>=4.17.0.0
    , hedgehog                   ^>=1.2
    , lawful-classes-hedgehog    ^>=0.1.2.0
    , lawful-classes-quickcheck  ^>=0.1.2.0
    , lawful-classes-types       ^>=0.1.0.0
    , mtl                        ^>=2.2.2
    , QuickCheck                 ^>=2.14.2
    , tasty                      ^>=1.4.3
    , tasty-expected-failure     ^>=0.12.3
    , transformers               ^>=0.5.6.2

  build-tool-depends: markdown-unlit:markdown-unlit ^>=0.5.1
  ghc-options:        -pgmL markdown-unlit
