cabal-version:   3.0
name:            lawful-classes-demo
version:         0.1.0.0
synopsis:        Demo project for lawful-classes

-- description:
homepage:        https://github.com/NicolasT/lawful-classes
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.17.0.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite lawful-classes-demo-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                 ^>=4.17.0.0
    , lawful-classes-demo
