cabal-version:   3.0
name:            lawful-classes-demo
version:         0.1.0.0
synopsis:        Demo project for lawful-classes
description:
  A demo of the @lawful-classes@ ecosystem, including a library exposing a
  class with some laws and an instance of said class, and a test-suite which
  validates the instance obeys to the laws, both using Hedgehog and QuickCheck.
  .
  Note, in a real-world project, one would use either Hedgehog or QuickCheck to
  check the laws, and the class and instance(s) are likely found in different
  packages.

homepage:        https://github.com/NicolasT/lawful-classes
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be
copyright:       (c) 2023, Nicolas Trangez
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.4

source-repository head
  type:     git
  location: https://github.com/NicolasT/lawful-classes.git
  subdir:   lawful-classes-demo
  branch:   main

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Test.Lawful.Demo

  -- other-modules:
  other-extensions:
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses

  build-depends:
    , base                  ^>=4.14.3.0 || ^>=4.15.1.0 || ^>=4.16.4.0 || ^>=4.17.0.0
    , lawful-classes-types  ^>=0.1.0.0
    , mtl                   ^>=2.2.2
    , transformers          ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite lawful-classes-demo-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  other-extensions: TypeApplications
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                       ^>=4.14.3.0 || ^>=4.15.1.0 || ^>=4.16.4.0 || ^>=4.17.0.0
    , hedgehog                   ^>=1.2
    , lawful-classes-demo
    , lawful-classes-hedgehog    ^>=0.1.0.0
    , lawful-classes-quickcheck  ^>=0.1.0.0
    , QuickCheck                 ^>=2.14.2
    , tasty                      ^>=1.4.3
    , transformers               ^>=0.5.6.2
