cabal-version:   3.0
name:            lawful-classes-demo
version:         0.1.0.0
synopsis:        Demo project for lawful-classes
description:
  A demo of the @lawful-classes@ ecosystem, including a library exposing a
  class with some laws and an instance of said class, and a test-suite which
  validates the instance obeys to the laws, both using Hedgehog and QuickCheck.
  .
  Note, in a real-world project, one would use either Hedgehog or QuickCheck to
  check the laws, and the class and instance(s) are likely found in different
  packages.

homepage:        https://github.com/NicolasT/lawful-classes
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be
copyright:       (c) 2023, Nicolas Trangez
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/NicolasT/lawful-classes.git
  subdir:   lawful-classes-demo
  branch:   main

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.17.0.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite lawful-classes-demo-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                 ^>=4.17.0.0
    , lawful-classes-demo
