cabal-version:   3.0
name:            lawful-classes-hedgehog
version:         0.1.0.0
synopsis:        Hedgehog support for lawful-classes

-- description:
homepage:        https://github.com/NicolasT/lawful-classes
license:         Apache-2.0
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.17.0.0
  hs-source-dirs:   src
  default-language: Haskell2010
